--- a/book.tex
+++ b/book.tex
@@ -5896,9 +5896,9 @@ Details: http://source.sakaiproject.org/viewsvn/?view=rev\&rev=39772\\
 }
 
 The entire file is of mail interactions is available from 
-\url{www.py4inf.com/mbox.txt} 
+\url{www.py4inf.com/code/mbox.txt} 
 and a shortened version of the file is available from
-\url{www.py4inf.com/mbox-short.txt}.
+\url{www.py4inf.com/code/mbox-short.txt}.
 
 To break the file into lines, there is a special character that 
 represents the ``end of the line'' called the {\bf newline} character.
@@ -8255,7 +8255,7 @@ print counts
 When we run the program, we see a raw dump of all of the counts in unsorted
 hash order.
 (the {\tt romeo.txt} file is available at
-\url{www.py4inf.com/romeo.txt})
+\url{www.py4inf.com/code/romeo.txt})
 
 \beforeverb
 \begin{verbatim}
