--- a/book.tex
+++ b/book.tex
@@ -4503,14 +4503,25 @@ never satisfied.
 \section{Exercises}
 
 \begin{ex}
+Write a program which reads list of numbers until ``done'' is entered.
+Once ``done'' is entered, print out the total, count, and average
+of the numbers.  If the user enters anything other than a number, 
+print an error message and skip to the next number.
 
-\index{eval function}
-\index{function!eval}
+\begin{verbatim}
+Enter a number: 4
+Enter a number: 5
+Enter a number: bad data
+Invalid input
+Enter a number: 7
+Enter a number: done
+Average: 5.33333333333
+\end{verbatim}
+\end{ex}
 
-% TBD
-
-Need some exercises here.
-
+\begin{ex}
+Write another program that prompts for a list of numbers as above
+and at the end prints out both the maximum and minimum of the numbers.
 \end{ex}
 
 
@@ -9496,72 +9507,6 @@ You can download a solution from \url{thinkpython.com/code/anagram_sets.py}.
 
 \end{enumerate}
 \end{ex}
-
-
-
-\begin{ex}
-
-\index{Car Talk}
-\index{Puzzler}
-
-Here's another Car Talk Puzzler\footnote{
-\url{www.cartalk.com/content/puzzler/transcripts/200651}}:
-
-\begin{quote}
-What is the longest English word, that remains a valid English word,
-as you remove its letters one at a time?
-
-Now, letters can be removed from either end, or the middle, but you
-can't rearrange any of the letters. Every time you drop a letter, you
-wind up with another English word. If you do that, you're eventually
-going to wind up with one letter and that too is going to be an
-English word---one that's found in the dictionary. I want to know
-what's the longest word and how many letters does it
-have?
-
-I'm going to give you a little modest example: Sprite. Ok? You start
-off with sprite, you take a letter off, one from the interior of the
-word, take the r away, and we're left with the word spite, then we
-take the e off the end, we're left with spit, we take the s off, we're
-left with pit, it, and I.
-\end{quote}
-
-\index{reducible word}
-\index{word, reducible}
-
-Write a program to find all words that can be reduced in this way,
-and then find the longest one.
-
-This exercise is a little more challenging than most, so here are
-some suggestions:
-
-\begin{enumerate}
-
-\item You might want to write a function that takes a word and
-  computes a list of all the words that can be formed by removing one
-  letter.  These are the ``children'' of the word.
-
-\index{recursive definition}
-\index{definition!recursive}
-
-\item Recursively, a word is reducible if any of its children
-are reducible.  As a base case, you can consider the empty
-string reducible.
-
-\item The wordlist I provided, {\tt words.txt}, doesn't
-contain single letter words.  So you might want to add
-``I'', ``a'', and the empty string.
-
-\item To improve the performance of your program, you might want
-to memoize the words that are known to be reducible.
-
-\end{enumerate}
-
-You can see my solution at \url{thinkpython.com/code/reducible.py}.
-
-\end{ex}
-
-
 
 
 %\begin{ex}
